--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 ADMIN_SECRET_KEY = "$2b$10$2czrBpDfDw.lZchwr3BhbunDuMmVDgPTRS5kP9OqVb4cRmfieffWC" 
+MONGODB_CONNECTION_STRING = "mongodb+srv://waqarjr03:waqar03@cluster0.f3gwuqs.mongodb.net/ExcellenceAdmin"
