--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
