--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.13.2",
     "formik": "^2.4.9",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.556.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
