google map update function complete

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "axios": "^1.13.2",
     "formik": "^2.4.9",
     "jsonwebtoken": "^9.0.2",
